--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,123 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="compression_method">Sıkıştırma Methodu</string>
-    <string name="copied_to_clipboard">Panoya kopyalandı.</string>
-    <string name="settings_info_text">Standart şifreleme yöntemi, yüksek düzeyde güvenlik sunan AES\'dir. AES şifrelemenin özellikle düşük performanslı cihazlarda zaman alıcı olabileceğini lütfen unutmayın.
-\n
-\nDüşük performanslı cihazlara sahip kullanıcılar için ZIP_STANDARD alternatif olarak kullanılabilir. AES\'in daha yüksek bir güvenlik seviyesi sağladığını lütfen unutmayın.
-\n
-\nEğer temel endişeniz güvenlik ise, daha uzun işlem süresine rağmen AES kullanımını şiddetle tavsiye ediyoruz.</string>
-    <string name="folder">Klasör</string>
     <string name="no_file_selected">Dosya Seçilmedi</string>
-    <string name="compression_level">Sıkıştırma seviyesi</string>
-    <string name="liberapay">Liberapay</string>
-    <string name="no_password">Şifre Yok</string>
-    <string name="ok">OK</string>
-    <string name="create_zip">ZIP Dosyası Oluştur</string>
-    <string name="encryption_method">Şifreleme Methodu</string>
-    <string name="cancel">İptal</string>
-    <string name="permission_denied">Erişim Reddedildi</string>
-    <string name="zip_creation_failed">ZIP Dosyasını Arşivleme Başarısız</string>
-    <string name="extract">Çıkar</string>
-    <string name="donate">Bağış Yap</string>
+    <string name="folder">Klasör</string>
+    <string name="encryption_method">Şifreleme Yöntemi</string>
+    <string name="compression_method">Sıkıştırma Yöntemi</string>
+    <string name="settings_info_text">Dosyalar için varsayılan şifreleme yöntemi, yüksek düzeyde güvenlik sağlayan AES\'dir. Ancak, AES şifrelemenin özellikle düşük kaliteli cihazlarda zaman alıcı olabileceğini lütfen unutmayın.\n\nDaha az güçlü cihazlara sahip kullanıcılar için ZIP_STANDARD gibi bir alternatif kullanılabilir. Ancak, bu yöntemin AES ile aynı güvenlik seviyesini sunmadığını lütfen unutmayın.\n\nGüvenlik birincil endişenizse, daha uzun işlem süresine rağmen AES kullanmanızı şiddetle tavsiye ederiz.</string>
+    <string name="ok">TAMAM</string>
+    <string name="enter_password">Parola Giriniz</string>
+    <string name="permission_denied">İzin Reddedildi</string>
+    <string name="zip_creation_failed">ZIP dosyası arşivlenirken hata oluştu</string>
+    <string name="zip_creation_success">ZIP dosyası başarıyla arşivlendi</string>
     <string name="open_folder">Klasörü Aç</string>
-    <string name="extraction_success">Çıkarma başarılı</string>
-    <string name="share">Uygulama Linkini Paylaş</string>
-    <string name="enter_password">Şifre Giriniz</string>
-    <string name="extraction_failed">Çıkarma Başarısız Oldu</string>
-    <string name="zip_creation_success">ZIP Dosyası Başarıyla Arşivlendi</string>
-    <string name="sevenz_creation_success">7z Dosyası Başarıyla Arşivlendi</string>
-    <string name="sevenz_creation_failed">7z Dosyasını Arşivleme Başarısız</string>
-    <string name="compress_sevenz">7z Arşivle</string>
-    <string name="thread_count">Thread Sayısı</string>
-    <string name="max_available_thread">Maksimum thread sayısı için 0</string>
+    <string name="extraction_success">Dosya başarıyla çıkarıldı</string>
+    <string name="split_size_mb">Bölünmüş Boyut</string>
+    <string name="thread_count">Konu Sayısı</string>
+    <string name="solid_compression">Katı Sıkıştırma</string>
     <string name="enter_name_of_archive_optional">Arşiv Adı</string>
-    <string name="solid_compression">Katı Sıkıştırma (tar)</string>
-    <string name="_ten">64 kb (Standard)</string>
-    <string name="split_size_mb">Kısmi Arşiv Boyutu</string>
-    <string name="split_zip">ZIP Dosyasını Ayır</string>
-    <string name="encryption_strength">Şifreleme Gücü</string>
-    <string name="storage">Depolama</string>
-    <string name="home">Ev</string>
-    <string name="file_size">Boyut</string>
-    <string name="last_modified">Son Değiştirilme</string>
-    <string name="file_info">Dosya Bilgisi</string>
-    <string name="copying_files_progress">Dosya Kopyalanıyor: %1$d/%2$d</string>
-    <string name="moving_files_progress">Dosya Taşınıyor: %1$d/%2$d</string>
-    <string name="internal_storage">Dahili Depolama</string>
-    <string name="root">Kök</string>
-    <string name="directory_empty">Klasör Boş</string>
-    <string name="paste">Yapıştır</string>
-    <string name="archive">Arşiv</string>
-    <string name="show_hide_selected_files">Seçilen Dosyaları Göster/Gizle</string>
-    <string name="background">Arka Plan</string>
-    <string name="open_with">Bunula Aç</string>
-    <string name="compress_with">Bununla Sıkıştır:</string>
-    <string name="confirm_delete">Silmeyi Onayla</string>
-    <string name="confirm_delete_message">Bunu Silmek İstediğinden Emin Misin?</string>
+    <string name="_ten">Varsayılan değer 64kb</string>
+    <string name="extract">Çıkar</string>
+    <string name="create_zip">ZIP Arşivle</string>
+    <string name="donate">Bağış</string>
+    <string name="liberapay">Liberapay</string>
+    <string name="compression_level">Sıkıştırma Seviyesi</string>
+    <string name="copied_to_clipboard">Panoya kopyalandı</string>
+    <string name="cancel">İptal</string>
+    <string name="extraction_failed">Çıkarma Başarısız Oldu</string>
+    <string name="no_password">Parola Yok</string>
+    <string name="share">Uygulama Bağlantısını Paylaş</string>
+    <string name="sevenz_creation_success">7z dosyası başarıyla arşivlendi</string>
+    <string name="sevenz_creation_failed">7z dosyası arşivlenirken hata oluştu</string>
+    <string name="compress_sevenz">7z Arşivle</string>
+    <string name="max_available_thread">0 maksimum kullanılabilir dişler için</string>
+    <string name="split_zip">ZIP’i Böl</string>
+    <string name="encryption_strength">Parolama Gücü</string>
+    <string name="home">Ana Sayfa</string>
+    <string name="confirm_delete">Silme Onayı</string>
+    <string name="confirm_delete_message">Bu öğeyi silmek istediğinizden emin misiniz?</string>
     <string name="delete">Sil</string>
-    <string name="file_path">Dosya Yolu</string>
-    <string name="multi_part_extract">Çoklu Parça Çıkarma:</string>
-    <string name="copy_text">Kopyala</string>
-    <string name="info_tip">İpucu</string>
-    <string name="deleting_files">Dosyalar Siliniyor: %1$d/%2$d</string>
-    <string name="extracting_progress">Çıkarılıyor … %1$d %%</string>
-    <string name="compressing_progress">Arşivleniyor … %1$d %%</string>
-    <string name="compression_ongoing">Sıkıştırılıyor …</string>
-    <string name="delete_files_notification_name">Dosya Sil</string>
-    <string name="copy_move_files_notification_name">Dosyaları Kopyala/Aktar</string>
-    <string name="extract_archive_notification_name">Arşivi Çıkart</string>
-    <string name="compress_archive_notification_name">Arşivi Sıkıştır</string>
+    <string name="delete_files_notification_name">Dosyayı Sil</string>
+    <string name="copy_move_files_notification_name">Dosyaları Kopyala/Taşı</string>
+    <string name="privacy_policy">Gizlilik Politikası</string>
     <string name="source_code">Kaynak Kodu</string>
     <string name="license">Lisans</string>
     <string name="report_an_issue">Bir Sorun Bildir</string>
     <string name="about">Hakkında</string>
-    <string name="grant_access">İzin Ver</string>
-    <string name="extraction_ongoing">Çıkarılıyor …</string>
-    <string name="archive_ongoing">Arşivleniyor …</string>
-    <string name="privacy_policy">Gizlilik Sözleşmesi</string>
-    <string name="crash_log">Çökme Raporu</string>
-    <string name="move">Aktar</string>
-    <string name="copy_to">Buraya Kopyala</string>
-    <string name="action_settings">Ayarlar</string>
-    <string name="storage_access_permission_text">Bu uygulamanın düzgün çalışabilmesi için dosyalarınza erişebilmesi gerek. Lütfen gerekli izinleri sağlayınız.</string>
+    <string name="grant_access">Erişime İzin Ver</string>
+    <string name="storage_access_permission_text">Uygulamanın düzgün çalışabilmesi için cihaz depolama alanınıza erişim izni gereklidir. Lütfen gerekli izinleri verin.</string>
     <string name="sd_card">SD Kart</string>
-    <string name="root_access">Kök izni</string>
-    <string name="root_access_summary">Kök Dizinine Erişimi Aktifleştirme</string>
-    <string name="info_tip_description">● Dosya/Klasörlere uzun basarak veya dosya/klasörlerin ikonlarına tıklayarak arşivlemek için seçin.\n\n● Bir dosyaya tıklayarak dosyayı çıkartma menüsünü açabilirsiniz.\n\n● \"Bununla Aç\" menüsü ile çıkarılan dosyalar "Dahili Depolama/ZipXtract" içinde varsayılan bir şekilde depolanır. Bunu uygulama ayarları içinden değiştirebilirsiniz.\n\n● Varsayılan arşivleme veya çıkartma eylemlerinden çıkan dosyalar üst dizin içinde kaydedilir (uygulama içinde olacak şekilde). Bu uygulama içinden ayarlardan değiştirilebilir.</string>
-    <string name="select_all">Hepsini Seç</string>
+    <string name="root_access">Kök erişimi</string>
+    <string name="root_access_summary">Kök dizin erişimini etkinleştir</string>
+    <string name="internal_storage">Dahili Depolama</string>
+    <string name="root">Kök</string>
+    <string name="directory_empty">Klasör boş</string>
+    <string name="paste">Yapıştır</string>
+    <string name="storage">Depolama</string>
+    <string name="archive">Arşiv</string>
+    <string name="show_hide_selected_files">Seçili Dosyaları Göster/Gizle</string>
+    <string name="background">Arka plan</string>
+    <string name="compress_with">Şununla Sıkıştır:</string>
+    <string name="file_path">Dosya Yolu</string>
+    <string name="file_size">Boyut</string>
+    <string name="last_modified">Son Düzenlenme</string>
+    <string name="file_info">Dosya Bilgisi</string>
+    <string name="multi_part_extract">Bölünmüş Dosyaları Çıkar:</string>
+    <string name="copy_text">Kopyala</string>
+    <string name="info_tip">Faydalı İpucu</string>
+    <string name="archive_ongoing">Arşivleniyor…</string>
+    <string name="copying_files_progress">Dosyalar kopyalanıyor: %1$d/%2$d</string>
+    <string name="moving_files_progress">Dosyalar taşınıyor: %1$d/%2$d</string>
+    <string name="deleting_files">Dosyalar siliniyor: %1$d/%2$d</string>
+    <string name="extracting_progress">Çıkartılıyor… %%%1$d</string>
+    <string name="compressing_progress">Arşivleniyor… %%%1$d</string>
+    <string name="compression_ongoing">Sıkıştırılıyor…</string>
+    <string name="extract_archive_notification_name">Arşivi Çıkart</string>
+    <string name="compress_archive_notification_name">Arşiv Oluştur</string>
+    <string name="extraction_ongoing">Çıkartılıyor…</string>
+    <string name="crash_log">Çökme Kaydı</string>
+    <string name="move">Taşı</string>
+    <string name="info_tip_description">● Arşivlemek için dosya ve klasörleri seçmek üzere dosya/klasör simgelerine tıklayın ya da dosya ve klasörlere uzun basın.\n\n● Çıkarma seçeneklerini belirlemek için bir dosyaya tıklayarak çıkarma menüsünü açın.\n\n● İşletim sisteminin “Şununla Aç” menüsü ile çıkarılan dosyalar varsayılan olarak Dahili Depolama/ZipXtract klasörüne kaydedilir. Bunu uygulama ayarlarından değiştirebilirsiniz.\n\n● Arşivleme veya arşiv çıkarma işlemlerinde (uygulama içinde) varsayılan konum, ilgili dosyanın üst dizinidir. Bu ayar da uygulama ayarlarından değiştirilebilir.</string>
+    <string name="copy_to">Şuraya Kopyala</string>
+    <string name="action_settings">Ayarlar</string>
+    <string name="select_all">Tümünü Seç</string>
     <string name="search">Ara</string>
-    <string name="order">Sıra</string>
+    <string name="order">Sipariş</string>
     <string name="ascending">Artan</string>
     <string name="descending">Azalan</string>
-    <string name="sort_by">Sıralama ölçütü</string>
-    <string name="name">İsim</string>
-    <string name="size">Boyut</string>
-    <string name="time_of_creation">Oluşturma Zamanı</string>
-    <string name="extension">Eklenti</string>
-    <string name="close">SKapat</string>
-    <string name="extract_path">Çıkarılmış dosyaların dizini</string>
-    <string name="archive_path">Arşivlenmiş Dosyaların Dizini</string>
-    <string name="archive_path_summary">Varsayılan çıkarma dizinini değiştir.\nVarsayılan bir \"Üst Dizindir\"</string>
-    <string name="extract_path_summary">Varsayılan çıkarma dizinini değiştir.\nVarsayılan bir \"Üst Dizindir\" veya Dahili Depolama/ZipXtract (\"Bununla Aç\" menüsü ile çıkarılmış dosyalar için)</string>
-    <string name="compress_tar">TAR sıkıştır</string>
-    <string name="compression_success">Sıkıştırma Başarılı</string>
-    <string name="archive_success">Dosya Başarıyla Arşivlendi</string>
+    <string name="sort_by">Şuna Göre Sırala</string>
+    <string name="name">Ad</string>
+    <string name="size">Boyutu</string>
+    <string name="time_of_creation">Değiştirildi</string>
+    <string name="extension">Dosya uzantısı</string>
+    <string name="close">Kapat</string>
+    <string name="extract_path">Çıkarılan Dosyalar Klasörü</string>
+    <string name="archive_path">Arşivlenen Dosyalar Klasörü</string>
+    <string name="archive_path_summary">Arşivlenen dosyalar için varsayılan klasörü değiştirin.\nVarsayılan klasör, mevcut klasördür.</string>
+    <string name="extract_path_summary">Çıkarılan dosyalar için varsayılan klasörü değiştirin.\nVarsayılan klasör, mevcut klasör veya “/Dahili Depolama/ZipXtract” (eğer “Şununla Aç” menüsü ile çıkarıldıysa) olarak ayarlanmıştır.</string>
+    <string name="compress_tar">TAR Arşivle</string>
+    <string name="compression_success">Sıkıştırma işlemi başarılı</string>
+    <string name="archive_success">Dosya başarıyla arşivlendi</string>
     <string name="tar_creation_success">TAR dosyası başarıyla arşivlendi</string>
-    <string name="file_deleted">Dosya silindi</string>
+    <string name="file_deleted">Silindi</string>
     <string name="operation_cancelled">İşlem iptal edildi</string>
-    <string name="tar_creation_failed">TAR dosyası arşivlenirken hatayla karşılaşıldı</string>
-    <string name="compression_failed">Sıkıştırma başarısız</string>
-    <string name="general_error_msg">Bilinmeyen bir hata ile karşılaşıldı</string>
+    <string name="tar_creation_failed">TAR dosyası arşivlenirken hata oluştu</string>
+    <string name="compression_failed">Sıkıştırma başarısız oldu</string>
+    <string name="general_error_msg">Beklenmeyen bir hata oluştu.</string>
     <string name="unsupported_compression_format">Bu sıkıştırma formatı desteklenmiyor.</string>
-    <string name="access_denied">Erişim Reddedildi</string>
-    <string name="no_files_to_archive">Arşivlenecek dosya seçilmedi</string>
-    <string name="sd_card_not_available">Sd kart veya harici depolama bulunamadı</string>
-    <string name="copying_files">Dosyalar kopyalanıyor …</string>
-    <string name="moving_files">Dosyalar taşınıyor …</string>
-    <string name="delete_ongoing">Dosyalar Siliniyor …</string>
-    <string name="passwords_do_not_match">Şifreler birbiriyle uyuşmuyor</string>
+    <string name="access_denied">Erişim reddedildi</string>
+    <string name="no_files_to_archive">Arşivleme için dosya seçilmedi</string>
+    <string name="sd_card_not_available">SD kart veya harici depolama algılanamadı</string>
+    <string name="copying_files">Kopyalanıyor…</string>
+    <string name="moving_files">Taşınıyor…</string>
+    <string name="delete_ongoing">Siliniyor…</string>
     <string name="confirm_password">Şifreyi Onayla</string>
-    <string name="wrong_password">Yanlış Şifre</string>
-    <string name="file_already_exists">Bu dosya zaten var</string>
+    <string name="passwords_do_not_match">Şifreler uyuşmuyor</string>
+    <string name="wrong_password">Yanlış şifre</string>
+    <string name="file_already_exists">Dosya zaten var</string>
+    <string name="open_with">Birlikte Aç</string>
+    <string name="invalid_value">Invalid girişi</string>
+    <string name="please_enter_value_between_0_and_22">0 ile 22 arasında bir değer girin</string>
+    <string name="archiving_started_in_background">Archiving arka planda başladı</string>
+    <string name="no_compression">Hiçbir Promosyon Yok</string>
+    <string name="remove">Kaldırın</string>
+    <string name="preview_archive">Preview Archive</string>
+    <string name="add">Add</string>
+    <string name="directory_selection_disabled">Folder seçilebilir, içindeki dosyaları seçin.</string>
+    <string name="select_file">Dosyayı seçin..</string>
+    <string name="select_files">Add ([X5X)</string>
+    <string name="donate_desc">ZipXtract faydalı bulursanız, lütfen gelişimini desteklemeyi düşünün:</string>
+    <string name="error_too_many_parts">Bu %1$d parçaları üretecektir</string>
+    <string name="select_archive_type_title">Arşiv türü seçin</string>
+    <string name="add_folder_confirmation_title">Mevcut klasörü ekleyin?</string>
+    <string name="add_folder_confirmation_message">Dosyaya ‘%1$s eklemek ister misiniz?</string>
+    <string name="split_parts_number_req">100\'den fazla bölünmüş parçaya izin verin</string>
+    <string name="fast_search">Hızlı Arama Hızlı Arama</string>
+    <string name="fast_search_summary">Android\'in medya indeksini daha hızlı arama için kullanın</string>
 </resources>
