--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,18 +2,14 @@
 <resources>
     <string name="compression_method">Kompressionsmethode</string>
     <string name="copied_to_clipboard">In die Zwischenablage kopiert</string>
-    <string name="settings_info_text">Die Standardverschlüsselungsmethode ist AES, welche ein hohes Maß an Sicherheit bietet. Bitte beachten Sie, dass die AES-Verschlüsselung zeitaufwändig sein kann, insbesondere auf Geräten mit geringerer Leistung.
-\n
-\nFür Benutzer mit leistungsschwachen Geräten kann ZIP_STANDARD als Alternative verwendet werden. Bitte beachten Sie, dass AES ein höheres Maß an Sicherheit liefert.
-\n
-\nWenn Sicherheit Ihr Hauptanliegen ist, empfehlen wir trotz der längeren Verarbeitungszeit eindringlich die Verwendung von AES.</string>
+    <string name="settings_info_text">Die Standardverschlüsselungsmethode ist AES, welche ein hohes Maß an Sicherheit bietet. Bitte beachte, dass die AES-Verschlüsselung zeitaufwändig sein kann, insbesondere auf Geräten mit geringerer Leistung. \n \nFür Benutzer mit leistungsschwachen Geräten kann ZIP_STANDARD als Alternative verwendet werden. Bitte beachte, dass AES ein höheres Maß an Sicherheit liefert. \n \nWenn Sicherheit das Hauptanliegen ist, empfehlen wir trotz der längeren Verarbeitungszeit eindringlich die Verwendung von AES.</string>
     <string name="folder">Verzeichnis</string>
     <string name="no_file_selected">Keine Datei ausgewählt</string>
-    <string name="compression_level">Komprimierungslevel</string>
+    <string name="compression_level">Kompressionslevel</string>
     <string name="liberapay">Liberapay</string>
     <string name="no_password">Kein Passwort</string>
     <string name="ok">OK</string>
-    <string name="create_zip">ZIP komprimieren</string>
+    <string name="create_zip">ZIP-Archiv erstellen</string>
     <string name="encryption_method">Verschlüsselungsmethode</string>
     <string name="cancel">Abbrechen</string>
     <string name="permission_denied">Erlaubnis verweigert</string>
@@ -21,32 +17,32 @@
     <string name="extract">Entpacken</string>
     <string name="donate">Spenden</string>
     <string name="open_folder">Verzeichnis öffnen</string>
-    <string name="extraction_success">Datei erfolgreich extrahiert</string>
+    <string name="extraction_success">Datei erfolgreich entpackt</string>
     <string name="share">App-Link teilen</string>
-    <string name="enter_password">Password eingeben</string>
-    <string name="extraction_failed">Extrahierung fehlgeschlagen</string>
+    <string name="enter_password">Passwort eingeben</string>
+    <string name="extraction_failed">Entpacken fehlgeschlagen</string>
     <string name="zip_creation_success">ZIP-Datei erfolgreich archiviert</string>
     <string name="sevenz_creation_success">7z-Datei erfolgreich archiviert</string>
     <string name="sevenz_creation_failed">Fehler beim Archivieren der 7z-Datei</string>
-    <string name="compress_sevenz">7z archivieren</string>
+    <string name="compress_sevenz">7z-Archiv erstellen</string>
     <string name="thread_count">Anzahl Threads</string>
     <string name="max_available_thread">0 für maximal verfügbare Threads</string>
     <string name="enter_name_of_archive_optional">Archivname</string>
     <string name="solid_compression">Solide Kompression (tar)</string>
     <string name="_ten">64 kb (Standard)</string>
-    <string name="split_size_mb">Größe Teilarchiv</string>
+    <string name="split_size_mb">Größe der Teilarchive</string>
     <string name="split_zip">ZIP aufteilen</string>
     <string name="encryption_strength">Verschlüsselungsstärke</string>
-    <string name="storage">Speicherung</string>
-    <string name="home">Home</string>
+    <string name="storage">Speicher</string>
+    <string name="home">Startseite</string>
     <string name="file_size">Größe</string>
-    <string name="last_modified">Letzte Änderung</string>
+    <string name="last_modified">Zuletzt geändert</string>
     <string name="file_info">Dateiinfo</string>
     <string name="copying_files_progress">Dateien werden kopiert: %1$d/%2$d</string>
     <string name="moving_files_progress">Dateien werden verschoben: %1$d/%2$d</string>
-    <string name="internal_storage">Interne Speicherung</string>
+    <string name="internal_storage">Interner Speicher</string>
     <string name="root">Root</string>
-    <string name="directory_empty">Ordner ist leer</string>
+    <string name="directory_empty">Verzeichnis ist leer</string>
     <string name="paste">Einfügen</string>
     <string name="archive">Archiv</string>
     <string name="show_hide_selected_files">Ausgewählte Dateien anzeigen/ausblenden</string>
@@ -54,37 +50,37 @@
     <string name="open_with">Öffnen mit</string>
     <string name="compress_with">Komprimieren mit:</string>
     <string name="confirm_delete">Löschbestätigung</string>
-    <string name="confirm_delete_message">Sind Sie sicher, dass Sie dieses Element löschen möchten?</string>
+    <string name="confirm_delete_message">Sicher, dass dieses Element gelöscht werden soll?</string>
     <string name="delete">Löschen</string>
     <string name="file_path">Pfad</string>
-    <string name="multi_part_extract">Multi Part Extract:</string>
+    <string name="multi_part_extract">Mehrteiliges Auspacken:</string>
     <string name="copy_text">Kopieren</string>
     <string name="info_tip">Nützlicher Tipp</string>
     <string name="deleting_files">Dateien werden gelöscht: %1$d/%2$d</string>
-    <string name="extracting_progress">Wird extrahiert … %1$d %%</string>
+    <string name="extracting_progress">Wird entpackt… %1$d %%</string>
     <string name="compressing_progress">Wird archiviert … %1$d %%</string>
     <string name="compression_ongoing">Wird komprimiert …</string>
     <string name="delete_files_notification_name">Datei löschen</string>
     <string name="copy_move_files_notification_name">Dateien kopieren/verschieben</string>
-    <string name="extract_archive_notification_name">Archiv extrahieren</string>
+    <string name="extract_archive_notification_name">Archiv entpacken</string>
     <string name="compress_archive_notification_name">Archiv komprimieren</string>
     <string name="source_code">Quellcode</string>
     <string name="license">Lizenz</string>
     <string name="report_an_issue">Fehler melden</string>
     <string name="about">Über</string>
     <string name="grant_access">Zugriff gewähren</string>
-    <string name="extraction_ongoing">Wird extrahiert …</string>
+    <string name="extraction_ongoing">Wird entpackt…</string>
     <string name="archive_ongoing">Wird archiviert …</string>
     <string name="privacy_policy">Datenschutzerklärung</string>
     <string name="crash_log">Absturzprotokoll</string>
     <string name="move">Verschieben nach</string>
     <string name="copy_to">Kopieren nach</string>
     <string name="action_settings">Einstellungen</string>
-    <string name="storage_access_permission_text">Diese App benötigt Zugriff auf den Speicher Ihres Geräts, um ordnungsgemäß zu funktionieren. Bitte erteilen Sie die erforderlichen Berechtigungen.</string>
+    <string name="storage_access_permission_text">Diese App benötigt Zugriff auf den Speicher deines Geräts, um richtig zu funktionieren. Bitte erteile die erforderlichen Berechtigungen.</string>
     <string name="sd_card">SD-Karte</string>
     <string name="root_access">Root-Zugang</string>
     <string name="root_access_summary">Root-Verzeichnis-Zugang aktivieren</string>
-    <string name="info_tip_description">● Lang drücken Sie Dateien und Ordner oder klicken Sie auf Datei/Ordner-Symbole, um sie für die Archivierung auszuwählen.\n\n● Klicken Sie auf eine Datei, um das Extraktionsmenü zur Auswahl der Extraktionsoptionen anzuzeigen.\n\n● Dateien, die mit dem Menü \"Öffnen mit\" von OS extrahiert werden, werden standardmäßig im internen Speicher/ZipXtract gespeichert. Ändern Sie dies in App-Einstellungen.\n\n● Der Standard-Standort für Archivierung oder Archivierung (innerhalb der App) ist das Stammverzeichnis der jeweiligen Datei(en). Dies kann in den App-Einstellungen geändert werden.</string>
+    <string name="info_tip_description">● Halte Dateien und Ordner lange gedrückt oder klicke auf Datei-/Ordner-Symbole, um sie für die Erstellung eines Archivs auszuwählen.\n\n● Klicke auf eine Datei, um das Menü zur Auswahl der Entpackoptionen anzuzeigen.\n\n● Dateien, die mittels \"Öffnen mit\" entpackt werden, werden standardmäßig in \"/Interner Speicher/ZipXtract\" gespeichert. Dies kann in den App-Einstellungen geändert werden..\n\n● Das standardmäßige Zielverzeichnis für das Erstellen oder Entpacken eines Archivs (innerhalb der App) ist das aktuelle Verzeichnis der jeweiligen Datei(en). Dies kann in den App-Einstellungen geändert werden.</string>
     <string name="select_all">Alles auswählen</string>
     <string name="search">Suchen</string>
     <string name="order">Reihenfolge</string>
@@ -94,13 +90,13 @@
     <string name="name">Name</string>
     <string name="size">Größe</string>
     <string name="time_of_creation">Geändert</string>
-    <string name="extension">Erweiterung</string>
+    <string name="extension">Dateiendung</string>
     <string name="close">Schließen</string>
-    <string name="extract_path">Ordner für extrahierte Dateien</string>
+    <string name="extract_path">Ordner für entpackte Dateien</string>
     <string name="archive_path">Ordner für archivierte Dateien</string>
-    <string name="archive_path_summary">Ändern Sie den Standard-Extrakt-Ordner.\nStandard ist \"Elternordner\"</string>
-    <string name="extract_path_summary">Ändern Sie den Standard-Extrakt-Ordner.\nStandard ist \"Elternordner\" oder Interner Speicher/ZipXtract (für \"Öffnen mit\" Menü extrahiert Archiv)</string>
-    <string name="compress_tar">TAR archivieren</string>
+    <string name="archive_path_summary">Standardordner für archivierte Dateien ändern.\nStandard ist der übergeordnete Ordner.</string>
+    <string name="extract_path_summary">Standardordner für entpackte Dateien ändern.\nStandard ist der übergeordnete Ordner oder \"/Interner Speicher/ZipXtract\" (falls das Archiv per \"Öffnen mit\" entpackt wurde)</string>
+    <string name="compress_tar">TAR-Archiv erstellen</string>
     <string name="compression_success">Komprimierung erfolgreich</string>
     <string name="archive_success">Datei erfolgreich archiviert</string>
     <string name="tar_creation_success">TAR-Datei erfolgreich archiviert</string>
@@ -112,12 +108,30 @@
     <string name="unsupported_compression_format">Dieses Komprimierungsformat wird nicht unterstützt.</string>
     <string name="access_denied">Zugang verweigert</string>
     <string name="no_files_to_archive">Für die Archivierung wurden keine Dateien ausgewählt</string>
-    <string name="sd_card_not_available">SD-Karte oder externer Speicherung nicht erkannt</string>
+    <string name="sd_card_not_available">SD-Karte oder externer Speicher nicht erkannt</string>
     <string name="copying_files">Wird kopiert …</string>
     <string name="moving_files">Wird verschoben …</string>
     <string name="delete_ongoing">Wird gelöscht …</string>
-    <string name="passwords_do_not_match">Passwort passt nicht</string>
+    <string name="passwords_do_not_match">Passwörter stimmen nicht überein</string>
     <string name="confirm_password">Passwort bestätigen</string>
     <string name="wrong_password">Falsches Passwort</string>
     <string name="file_already_exists">Datei existiert bereits</string>
+    <string name="invalid_value">Invalide Input</string>
+    <string name="please_enter_value_between_0_and_22">Wert zwischen 0 und 22 eingeben</string>
+    <string name="archiving_started_in_background">Archivierung gestartet im Hintergrund</string>
+    <string name="no_compression">Keine Kompression</string>
+    <string name="remove">Entfernen</string>
+    <string name="preview_archive">Voransicht Archive</string>
+    <string name="add">Hinzufügen</string>
+    <string name="directory_selection_disabled">Ordner können nicht ausgewählt werden, wählen Sie die Dateien darin.</string>
+    <string name="select_file">Wählen Sie Datei..</string>
+    <string name="select_files">(%d)</string>
+    <string name="donate_desc">Wenn Sie ZipXtract nützlich finden, beachten Sie bitte seine Entwicklung zu unterstützen:</string>
+    <string name="error_too_many_parts">Dies würde %1$d Teile generieren</string>
+    <string name="select_archive_type_title">Archivtyp auswählen</string>
+    <string name="add_folder_confirmation_title">Aktuellen Ordner hinzufügen?</string>
+    <string name="add_folder_confirmation_message">Möchten Sie den Ordner \'%1$s\' zum Archiv hinzufügen?</string>
+    <string name="split_parts_number_req">Erlauben Sie mehr als 100 geteilte Teile</string>
+    <string name="fast_search">Schnelle Suche</string>
+    <string name="fast_search_summary">Verwenden Sie Android-Medienindex für schnellere Suche</string>
 </resources>
