--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -75,8 +75,8 @@
     <string name="copying_files_progress">Копирование файлов: %1$d/%2$d</string>
     <string name="moving_files_progress">Перемещение файлов: %1$d/%2$d</string>
     <string name="deleting_files">Удаление файлов: %1$d/%2$d</string>
-    <string name="extracting_progress">Извлекается… %1$d %%</string>
-    <string name="compressing_progress">Архивация… %1$d %%</string>
+    <string name="extracting_progress">Извлекается... %1$d %%</string>
+    <string name="compressing_progress">Архивация... %1$d %%</string>
     <string name="copy_move_files_notification_name">Копировать/Переместить файлы</string>
     <string name="extract_archive_notification_name">Извлечь архив</string>
     <string name="compress_archive_notification_name">Сжать архив</string>
@@ -102,12 +102,12 @@
     <string name="name">Название</string>
     <string name="size">Размер</string>
     <string name="time_of_creation">Изменение</string>
-    <string name="extension">Расширение</string>
+    <string name="extension">Расширение файла</string>
     <string name="close">Закрыть</string>
     <string name="extract_path">Папка извлеченных файлов</string>
     <string name="archive_path">Папка с архивными файлами</string>
-    <string name="archive_path_summary">Укажите папку по умолчанию для извлечения.\nПо умолчанию это «родительская папка»</string>
-    <string name="extract_path_summary">Укажите папку извлечения по умолчанию.\nПо умолчанию используется «родительская папка» или Внутреннее хранилище/ZipXtract (для извлеченного архива в меню «Открыть с помощью»)</string>
+    <string name="archive_path_summary">Изменить папку по умолчанию для архивных файлов.\n(По умолчанию используется текущая папка).</string>
+    <string name="extract_path_summary">Измените папку по умолчанию для извлеченных файлов.\nПо умолчанию - текущая папка или \"/Internal Storage/ZipXtract\" (если файлы были извлечены через меню \"Открыть в\")</string>
     <string name="compress_tar">Сжать в TAR-архив</string>
     <string name="compression_success">Сжатие успешно</string>
     <string name="archive_success">Архив успешно создан</string>
@@ -120,4 +120,22 @@
     <string name="passwords_do_not_match">Пароль не совпадает</string>
     <string name="wrong_password">Неверный пароль</string>
     <string name="file_already_exists">Файл уже существует</string>
+    <string name="invalid_value">Неправильный ввод</string>
+    <string name="please_enter_value_between_0_and_22">Введите значение от 0 до 22</string>
+    <string name="archiving_started_in_background">Архивирование началось в фоне</string>
+    <string name="no_compression">Без сжатия</string>
+    <string name="remove">Удалить</string>
+    <string name="preview_archive">Архив предварительного просмотра</string>
+    <string name="add">Добавить</string>
+    <string name="directory_selection_disabled">Папка не может быть выбрана, выберите файлы внутри нее.</string>
+    <string name="select_file">Выберите файл..</string>
+    <string name="select_files">Добавить (%d</string>
+    <string name="donate_desc">Если вы считаете ZipXtract полезным, пожалуйста, подумайте о поддержке его разработки:</string>
+    <string name="error_too_many_parts">Это будет генерировать %1$d части</string>
+    <string name="select_archive_type_title">Тип архива</string>
+    <string name="add_folder_confirmation_title">Добавить текущую папку?</string>
+    <string name="add_folder_confirmation_message">Вы хотите добавить папку \"%1$s\" в архив?</string>
+    <string name="split_parts_number_req">Разрешить более 100 частей</string>
+    <string name="fast_search">Быстрый поиск</string>
+    <string name="fast_search_summary">Используйте медиа-индекс Android для более быстрого поиска</string>
 </resources>
