--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -121,11 +121,9 @@
     <string name="archiving_started_in_background">Archiving arka planda başladı</string>
     <string name="no_compression">Hiçbir Promosyon Yok</string>
     <string name="remove">Kaldırın</string>
-    <string name="preview_archive">Preview Archive</string>
-    <string name="add">Add</string>
     <string name="directory_selection_disabled">Folder seçilebilir, içindeki dosyaları seçin.</string>
     <string name="select_file">Dosyayı seçin..</string>
-    <string name="select_files">Add ([X5X)</string>
+    <string name="select_files">Ekle (%d)</string>
     <string name="donate_desc">ZipXtract faydalı bulursanız, lütfen gelişimini desteklemeyi düşünün:</string>
     <string name="error_too_many_parts">Bu %1$d parçaları üretecektir</string>
     <string name="select_archive_type_title">Arşiv türü seçin</string>
