--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="select_file">Select File…</string>
     <string name="select_files">Add (%d)</string>
     <string name="donate_desc">If you find ZipXtract useful, please consider supporting its development:</string>
+    <string name="file_list_is_fixed_for_this_operation">File list is fixed for this operation.</string>
 
     <!-- Bottom navigation -->
     <string name="archive">Archive</string>
@@ -145,6 +146,7 @@
     <string name="file_deleted">Deleted</string>
     <string name="copied_to_clipboard">Copied to clipboard</string>
     <string name="operation_cancelled">Operation cancelled</string>
+    <string name="archive_updated_successfully">Archive updated successfully</string>
 
     <!-- Error toast messages -->
     <string name="tar_creation_failed">Error archiving TAR file</string>
@@ -159,7 +161,11 @@
     <string name="permission_denied">Permission Denied</string>
     <string name="no_file_selected">No File Selected</string>
     <string name="sd_card_not_available">SD card or external storage not detected</string>
-
+    <string name="error_no_file_information_provided">Error: No file information provided.</string>
+    <string name="error_updating_archive">Error updating archive</string>
+    <string name="error_opening_archive">Error opening archive: %1$s</string>
+    <string name="no_valid_files_found_to_archive">No valid files found to archive.</string>
+    <string name="invalid_archive_type">Invalid archive type</string>
 
     <!-- Notification title-->
     <string name="copying_files">Copying…</string>
@@ -167,6 +173,7 @@
     <string name="delete_ongoing">Deleting…</string>
     <string name="extraction_ongoing">Extracting…</string>
     <string name="archive_ongoing">Archiving…</string>
+    <string name="updating_archive">Updating archive…</string>
 
     <!-- Notification content-->
     <string name="copying_files_progress">Copying files: %1$d/%2$d</string>
@@ -181,6 +188,7 @@
     <string name="copy_move_files_notification_name">Copy/Move Files</string>
     <string name="extract_archive_notification_name">Extract Archive</string>
     <string name="compress_archive_notification_name">Compress Archive</string>
+    <string name="update_archive_service">Update Archive</string>
 
     <!-- non-translatable strings -->
     <string name="zip" translatable="false">ZIP</string>
